postgres-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-db-pod
spec:
  containers:
    - name: postgres
      image: postgres:latest
      volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
  volumes:
    - name: postgres-storage
      persistentVolumeClaim:
        claimName: postgres-db-pvc
